# scripts-traitement-sircom

./: .aliases  .gitignore  0-extract_departement_to_sircom.py  0-si-cellule-vide-na.py  1-header_lettres_colonne.py  10-process-images.py  11-create_mapping_excel.py  12-verify_data_integrity.py  2-image_id_adder.py  3-fusion_tri_region_departement.py  4-changer-date-format.py  5-livrable-final.py  6-clean_headers_excel.py  7-add_pathimg_excel.py  8-optimize_content_excel.py  9-export_csv_utf16_final.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.bak  GEMINI.md  README.md  TODO.md  codegraph.json  installation.txt  pyproject.toml  requirements-2025.txt  sircom_master_script.py
.claude/: settings.json
.hermes/: profile.yml
cuisine-moi/: 2026-07-20-interface-web-sircom-2026.md
docs/: 2026-07-21-passation-post-ticket-17.md  2026-07-21-prompt-fable-verification-globale-sircom-2026.md  2026-07-21-synthese-verification-globale-sircom-2026.md  2026-07-23-prompt-glm-review-code-fable-flavien.md  2026-07-23-revue-code-fable-flavien.md
re-run-old-script-2026/: 00-extract_departement_to_sircom.py  01-si-cellule-vide-na.py  02-header_lettres_colonne.py  03-image_id_adder.py  04-fusion_tri_region_departement.py  05-changer-date-format.py  06-livrable-final.py  07-clean_headers_excel.py  08-add_pathimg_excel.py  09-optimize_content_excel.py  10-export_csv_utf16_final.py  11-process-images.py  12-create_mapping_excel.py  13-verify_data_integrity.py  README.md  run_jeu_test_2026.py  sircom2026_image_mapping.py  sircom2026_image_matching.py  sircom2026_image_processing.py  (+2 more)
(+319 files in other folders)
