[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sircom-madeinfrance"
version = "0.1.0"
description = "Socle web local Sircom 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "openpyxl>=3.1,<4",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
    "httpx2>=2.7,<3",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["sircom2026*"]

[tool.setuptools.package-data]
sircom2026 = ["templates/*.html", "static/**/*"]
