[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sircom-madeinfrance"
version = "0.1.0"
description = "Socle web local Sircom 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    "jinja2==3.1.6",
    "openpyxl==3.1.5",
    "Pillow==12.3.0",
    "python-multipart==0.0.32",
    "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "playwright==1.61.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.22",
]

[tool.setuptools.packages.find]
include = ["sircom2026*"]

[tool.setuptools.package-data]
sircom2026 = ["templates/*.html", "templates/partials/*.html", "static/**/*"]

[tool.coverage.run]
source = ["sircom2026"]

[tool.coverage.report]
fail_under = 89
show_missing = true
